seaqt/QtWebEngineQuick/gen_qquickwebengine_accessible.h

typedef QAccessible::State QAccessible__State;
class QAccessibleInterface;
class QQuickWebEngineViewAccessible;
typedef QtWebEngineCore::RenderWidgetHostViewQtDelegateQuickAccessible QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible;
class QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible;
typedef struct QAccessible__State QAccessible__State;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QQuickWebEngineViewAccessible QQuickWebEngineViewAccessible;
typedef struct QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible;
bool QQuickWebEngineViewAccessible_isValid(const QQuickWebEngineViewAccessible* self);
QAccessibleInterface* QQuickWebEngineViewAccessible_parent(const QQuickWebEngineViewAccessible* self);
QAccessibleInterface* QQuickWebEngineViewAccessible_focusChild(const QQuickWebEngineViewAccessible* self);
int QQuickWebEngineViewAccessible_childCount(const QQuickWebEngineViewAccessible* self);
QAccessibleInterface* QQuickWebEngineViewAccessible_child(const QQuickWebEngineViewAccessible* self, int index);
int QQuickWebEngineViewAccessible_indexOfChild(const QQuickWebEngineViewAccessible* self, QAccessibleInterface* param1);
struct seaqt_string QQuickWebEngineViewAccessible_text(const QQuickWebEngineViewAccessible* self, int param1);
int QQuickWebEngineViewAccessible_role(const QQuickWebEngineViewAccessible* self);
QAccessible__State* QQuickWebEngineViewAccessible_state(const QQuickWebEngineViewAccessible* self);
bool QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_isValid(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
QAccessibleInterface* QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_parent(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
struct seaqt_string QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_text(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self, int t);
int QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_role(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
QAccessible__State* QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_state(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
QAccessibleInterface* QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_focusChild(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
int QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_childCount(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self);
QAccessibleInterface* QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_child(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self, int index);
int QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible_indexOfChild(const QtWebEngineCore__RenderWidgetHostViewQtDelegateQuickAccessible* self, QAccessibleInterface* param1);